--- a/zkcore/pom.xml
+++ b/zkcore/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>edu.uw.zookeeper</groupId>
 		<artifactId>lite</artifactId>
-		<version>0.5.5-SNAPSHOT</version>
+		<version>0.5.5</version>
 		<relativePath>../parent</relativePath>
 	</parent>
 	<build>
