--- a/all/pom.xml
+++ b/all/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>edu.uw.zookeeper</groupId>
 		<artifactId>lite</artifactId>
-		<version>0.5.6</version>
+		<version>0.5.7-SNAPSHOT</version>
 		<relativePath>../parent</relativePath>
 	</parent>
 	<properties>
