--- a/apache/import/pom.xml
+++ b/apache/import/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 	   <groupId>edu.uw.zookeeper.lite</groupId>
 	   <artifactId>apache</artifactId>
-	   <version>0.5.6</version>
+	   <version>0.5.7-SNAPSHOT</version>
 	   <relativePath>..</relativePath>
 	</parent>
     <properties>        
