--- a/zkcore/pom.xml
+++ b/zkcore/pom.xml
@@ -127,6 +127,11 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.0-beta9</version>
 		</dependency>
+	    <dependency>
+            <groupId>net.engio</groupId>
+            <artifactId>mbassador</artifactId>
+            <version>1.1.7</version>
+        </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
