--- a/zkclient/pom.xml
+++ b/zkclient/pom.xml
@@ -115,5 +115,11 @@
 			<artifactId>jline</artifactId>
 			<version>2.11</version>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 </project>
