--- a/zkcore/pom.xml
+++ b/zkcore/pom.xml
@@ -8,11 +8,11 @@
 	<parent>
 		<groupId>edu.uw.zookeeper</groupId>
 		<artifactId>lite</artifactId>
-		<version>0.6.0-SNAPSHOT</version>
+		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../parent</relativePath>
 	</parent>
     <properties>
-        <netty-version>4.0.21.Final</netty-version>
+        <netty-version>4.0.23.Final</netty-version>
     </properties>
 	<build>
 		<resources>
@@ -88,12 +88,13 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>17.0</version>
+			<version>18.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.findbugs</groupId>
 			<artifactId>jsr305</artifactId>
-			<version>2.0.3</version>
+			<!-- version used in guava -->
+			<version>1.3.9</version>
 		</dependency>
 		<dependency>
 			<groupId>io.netty</groupId>
@@ -123,17 +124,17 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
-			<version>2.0-rc1</version>
+			<version>2.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.0-rc1</version>
+			<version>2.0.2</version>
 		</dependency>
 	    <dependency>
             <groupId>net.engio</groupId>
             <artifactId>mbassador</artifactId>
-            <version>1.1.10</version>
+            <version>1.2.0</version>
         </dependency>
 		<dependency>
 			<groupId>junit</groupId>
