--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.uw.zookeeper.lite</groupId>
-	<artifactId>testing</artifactId>
+	<artifactId>zklite-testing</artifactId>
 	<packaging>jar</packaging>
 	<name>ZooKeeper-Lite Testing</name>
 	<parent>
