--- a/zkcore/pom.xml
+++ b/zkcore/pom.xml
@@ -12,7 +12,8 @@
 		<relativePath>../parent</relativePath>
 	</parent>
     <properties>
-        <netty-version>4.0.23.Final</netty-version>
+        <netty-version>4.0.24.Final</netty-version>
+        <log4j2-version>2.1</log4j2-version>
     </properties>
 	<build>
 		<resources>
@@ -124,12 +125,12 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
-			<version>2.0.2</version>
+			<version>${log4j2-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.0.2</version>
+			<version>${log4j2-version}</version>
 		</dependency>
 	    <dependency>
             <groupId>net.engio</groupId>
